# RiveQtQuickPlugin

./: .clang-format  .gitignore  .gitmodules  AreaTex_8h_source.html  BUILDING.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  SearchTex_8h_source.html  annotated.html  annotated_dup.js  classRiveQtQuickItem-members.html  classRiveQtQuickItem.html  classRiveQtQuickItem.js  classRiveStateMachineInput-members.html  classRiveStateMachineInput.html  classes.html  datatypes_8h_source.html  dir_3370108e54297ddcfc6176f3de8c08ea.html  dir_4863680b64e0445e39829e7245ef27d1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b38715fb40f2450b428eb7925c24489f.html  dir_ca3dca0a90bea8e3f9ff05678e184b58.html  functions.html  functions_enum.html  functions_prop.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  postprocessingsmaa_8h_source.html  riveqsgopenglrendernode_8h_source.html  riveqsgrendernode_8h_source.html  riveqsgrhirendernode_8h_source.html  riveqsgsoftwarerendernode_8h_source.html  riveqtfactory_8h_source.html  riveqtfont_8h_source.html  riveqtopenglrenderer_8h_source.html  riveqtpaint_8h_source.html  (+11 more)
.github/workflows/: cmake.yml  doxygen.yml
examples/: CMakeLists.txt
examples/SimpleViewer/: 3507-7424-naridon-oni-fan-art.riv  CMakeLists.txt  ControlPanel.qml  RiveInspectorView.qml  bullet_man.riv  main.cpp  main.qml  qml.qrc
examples/SimpleViewer/rive/: 1298-2487-animated-icon-set-1-color.riv  basyskom.riv.license  bullet_man.riv  cannonball-man.riv  electrified-button.riv  electrified-button.riv.license  pathfinder.riv  simple-strokes.riv  sith-de-mayo.riv  travel-icons-pack.riv  tree-demo.riv  water-bar-demo.riv
examples/hellorive/: CMakeLists.txt  main.cpp  main.qml
examples/rive/: basyskom.riv  direct-blend-example.riv  direct-blend-example.riv.license  glow-grid.riv  glow-grid.riv.license  naridon-oni-fan-art.riv  nested-artboards-demo.riv  pathfinder.riv.license  rivebot-transform.riv  sith-the-mayo.riv.license  travel-icons-pack.riv.license  water-bar-demo.riv.license
html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  index.html  rivequickpainteditem_8h_source.html
latex/: refman.tex
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  enums_0.js  properties_0.js  properties_1.js  properties_2.js  properties_3.js  properties_4.js  properties_5.js  properties_6.js  properties_7.js  searchdata.js
shaders/: blending_fragment_shader.glsl  blending_vertex_shader.glsl  imageMesh_fragment_shader.glsl  imageMesh_vertex_shader.glsl  image_fragment_shader.glsl  image_vertex_shader.glsl  path_fragement_shader.glsl  path_vertex_shader.glsl
shaders/qt6/: blendRiveTextureNode.frag  blendRiveTextureNode.vert  drawRiveTextureNode.frag  drawRiveTextureNode.vert
src/: riveqtquickplugin.cpp  riveqtquickplugin.h
src/RiveQtQuickItem/: CMakeLists.txt  RiveQtQuickPlugin.qmltypes  RiveQtQuickPlugin.qmltypes.license  datatypes.h  qmldir  qmldir.license  riveqsgopenglrendernode.cpp  riveqsgopenglrendernode.h  riveqsgrendernode.cpp  riveqsgrendernode.h  riveqsgrhirendernode.cpp  riveqsgrhirendernode.h  riveqsgsoftwarerendernode.cpp  riveqsgsoftwarerendernode.h  riveqtpath.cpp  riveqtpath.h  riveqtquickitem.cpp  riveqtquickitem.h  riveqtquickplugin.cpp  riveqtquickplugin.h  riveqtstatemachineinputmap.cpp  riveqtstatemachineinputmap.h  rivequickpainteditem.cpp  rivestatemachineinput.cpp  rivestatemachineinput.h  rqqplogging.cpp  rqqplogging.h  shader.qrc
src/RiveQtQuickItem/polygon_triangulate/: polygon_triangulate.cpp  polygon_triangulate.hpp
src/RiveQtQuickItem/renderer/: riveqtfactory.cpp  riveqtfactory.h  riveqtfont.cpp  riveqtfont.h  riveqtopenglrenderer.cpp  riveqtopenglrenderer.h  riveqtpaint.cpp  riveqtpaint.h  riveqtpainterrenderer.cpp  riveqtpainterrenderer.h  riveqtrhirenderer.cpp  riveqtrhirenderer.h  riveqtrhirenderer.h.autosave  riveqtutils.cpp  riveqtutils.h
src/RiveQtQuickItem/rhi/: postprocessingsmaa.cpp  postprocessingsmaa.h  texturetargetnode.cpp  texturetargetnode.h
src/RiveQtQuickItem/shaders/: blending_fragment_shader.glsl  blending_vertex_shader.glsl  imageMesh_fragment_shader.glsl  imageMesh_vertex_shader.glsl  image_fragment_shader.glsl  path_fragement_shader.glsl  path_vertex_shader.glsl
src/RiveQtQuickItem/shaders/qt6/: blendRiveTextureNode.frag  blendRiveTextureNode.vert  clipRiveTextureNode.frag  clipRiveTextureNode.vert  clipTextureNode.frag  clipTextureNode.vert  drawRiveTextureNode.frag  drawRiveTextureNode.vert  edges-luma.frag  edges.vert  finalDraw.frag  finalDraw.vert  smaa-blend.frag  smaa-blend.vert  smaa-weights.frag  smaa-weights.vert
src/qtquick/: datatypes.h  riveqsgopenglrendernode.cpp  riveqsgopenglrendernode.h  riveqsgrendernode.cpp  riveqsgrendernode.h  riveqsgrhirendernode.cpp  riveqsgrhirendernode.h  riveqsgsoftwarerendernode.cpp  riveqsgsoftwarerendernode.h  riveqtquickitem.cpp  riveqtquickitem.h  riveqtstatemachineinputmap.cpp  riveqtstatemachineinputmap.h  rivequickpainteditem.cpp  rivequickpainteditem.h
src/qtquick/rhi/: texturetargetnode.cpp  texturetargetnode.h
src/renderer/: riveqtfactory.cpp  riveqtfactory.h  riveqtfont.cpp  riveqtfont.h  riveqtopenglrenderer.cpp  riveqtopenglrenderer.h  riveqtpaint.cpp  riveqtpaint.h  riveqtpainterrenderer.cpp  riveqtpainterrenderer.h  riveqtrhirenderer.cpp  riveqtrhirenderer.h  riveqtutils.cpp  riveqtutils.h
tests/: CMakeLists.txt
tests/test_RiveQtPath/: CMakeLists.txt  test_triangulation.cpp
